Bug 464521 - Open with dialog search does not search all apps
Summary: Open with dialog search does not search all apps
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2023-01-19 20:42 UTC by Kai Uwe Broulik
Modified: 2023-06-09 07:21 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2023-01-19 20:42:30 UTC
SUMMARY
The portal-based "open with" dialog does not search all apps unless I tell it to. This is annoying, if I e.g. want to open something in "okteta", I type "Okteta" and it finds nothing because it only filters the visible list of apps.

STEPS TO REPRODUCE
1. "Open with"
2. Type "Okteta"

OBSERVED RESULT
"No matches"

EXPECTED RESULT
"Okteta" is displayed

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2023-01-05
Comment 1 Nate Graham 2023-01-20 22:50:22 UTC
Yeah, maybe we can automatically show all apps if nothing matches.
Comment 2 Bug Janitor Service 2023-02-13 00:21:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/162
Comment 3 Nate Graham 2023-02-15 00:18:31 UTC
Git commit 28e3e3c000f0f51a5b6cee7e0d64cc0a6b162a84 by Nate Graham.
Committed on 14/02/2023 at 21:14.
Pushed by ngraham into branch 'master'.

appchooserdialog: show all apps while searching

When you search, it's probably because what you want isn't visible among
the small set of filtered apps. In this case, if we don't search through
everything, it's annoying. So let's automatically show all apps when the
user starts searching so it searches through all of them.
FIXED-IN: 5.27.1

M  +5    -0    src/appchooserdialog.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/28e3e3c000f0f51a5b6cee7e0d64cc0a6b162a84
Comment 4 Nate Graham 2023-02-15 01:48:59 UTC
Git commit 9d9546963f777f0084bbac0ba32bb03285cc13da by Nate Graham.
Committed on 15/02/2023 at 01:48.
Pushed by ngraham into branch 'cherry-pick-28e3e3c0'.

appchooserdialog: show all apps while searching

When you search, it's probably because what you want isn't visible among
the small set of filtered apps. In this case, if we don't search through
everything, it's annoying. So let's automatically show all apps when the
user starts searching so it searches through all of them.
FIXED-IN: 5.27.1


(cherry picked from commit 28e3e3c000f0f51a5b6cee7e0d64cc0a6b162a84)

M  +5    -0    src/appchooserdialog.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/9d9546963f777f0084bbac0ba32bb03285cc13da
Comment 5 local10 2023-06-09 07:21:19 UTC
Thanks for the revering back to the old "Open With.." dialog, I really didn't like the new one with huge icons and other issues:

1. https://lists.debian.org/debian-kde/2023/02/msg00023.html
2. https://lists.debian.org/debian-kde/2023/02/msg00028.html

Operating System: Debian GNU/Linux 12
KDE Plasma Version: 5.27.5  KDE Frameworks Version: 5.103.0  Qt Version: 5.15.8
Kernel Version: 6.1.0-9-amd64 (64-bit)
Graphics Platform: X11