appchooserdialog: show all apps while searching

When you search, it's probably because what you want isn't visible among
the small set of filtered apps. In this case, if we don't search through
everything, it's annoying. So let's automatically show all apps when the
user starts searching so it searches through all of them.

BUG: 464521
FIXED-IN: 5.27.1


(cherry picked from commit 28e3e3c000f0f51a5b6cee7e0d64cc0a6b162a84)